--- a/.github/workflows/build_dev.yml
+++ b/.github/workflows/build_dev.yml
@@ -76,6 +76,10 @@ jobs:
           make
           mv syscallhook.kpm demo-syscallhook.kpm
 
+          cd ../hosts_file_redirect
+          make
+          mv hosts_file_redirect_1.1.8.kpm hosts_file_redirect_1.1.9.kpm
+
       - name: Upload elf
         uses: actions/upload-artifact@v3
         with:
@@ -95,6 +99,7 @@ jobs:
             kpms/demo-hello/demo-hello.kpm
             kpms/demo-inlinehook/demo-inlinehook.kpm
             kpms/demo-syscallhook/demo-syscallhook.kpm
+            kpms/hosts_file_redirect/hosts_file_redirect_1.1.9.kpm
           generateReleaseNotes: true
           allowUpdates: true
           replacesArtifacts: true
