--- a/kpms/hosts_redirect/Makefile
+++ b/kpms/hosts_redirect/Makefile
@@ -1,1 +1,50 @@
+MYKPM_VERSION := 1.2.0
 
+ifndef KP_DIR
+    KP_DIR = ../KernelPatch
+endif
+
+OS_NAME = $(shell uname | tr A-Z a-z)
+MACHINE = $(shell uname -m)
+NDK_BIN_DIR := toolchains/llvm/prebuilt/$(OS_NAME)-$(MACHINE)/bin
+ifdef ANDROID_NDK_LATEST_HOME
+    NDK_PATH ?= $(ANDROID_NDK_LATEST_HOME)/$(NDK_BIN_DIR)
+else ifdef ANDROID_NDK
+    NDK_PATH ?= $(ANDROID_NDK)/$(NDK_BIN_DIR)
+endif
+
+ifdef TARGET_COMPILE
+    CC := $(TARGET_COMPILE)gcc
+    LD := $(TARGET_COMPILE)ld
+else ifdef NDK_PATH
+    CC := $(NDK_PATH)/aarch64-linux-android31-clang
+    LD := $(NDK_PATH)/ld.lld
+endif
+
+CFLAGS = -Wall -O2 -fno-PIC -fno-asynchronous-unwind-tables -fno-stack-protector -fno-common -DMYKPM_VERSION=\"$(MYKPM_VERSION)$(HR_VER)\"
+
+INCLUDE_DIRS := . include patch/include linux/include linux/arch/arm64/include linux/tools/arch/arm64/include
+
+INCLUDE_FLAGS := $(foreach dir,$(INCLUDE_DIRS),-I$(KP_DIR)/kernel/$(dir))
+
+objs := hosts_redirect.o
+
+all: hosts_redirect_$(MYKPM_VERSION).kpm
+
+debug: CFLAGS += -DDEBUG
+debug: HR_VER := _d
+debug: hosts_redirect_$(MYKPM_VERSION)_debug.kpm
+
+hosts_redirect_$(MYKPM_VERSION).kpm: ${objs}
+	${CC} -r -o $@ $^
+
+hosts_redirect_$(MYKPM_VERSION)_debug.kpm: ${objs}
+	${CC} -r -o $@ $^
+
+%.o: %.c
+	${CC} $(CFLAGS) $(INCLUDE_FLAGS) -c -o $@ $<
+
+.PHONY: clean
+clean:
+	rm -rf *.kpm
+	find . -name "*.o" | xargs rm -f
